<resources>
    <string name="app_name">ProyectoMultimedia</string>
    <string name="titulo">Applicacion Multimedia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fotos">Fotos</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="galeria">Galeria</string>
    <string name="configuraci_n">Configuración</string>
    <string name="salir">Salir</string>
    <string name="descripcion_tv_nombre_imagen">Miniatura de la imagen</string>
    <string name="renombrar">Renombrar</string>
    <string name="borrar">Borrar</string>
    <string name="nuevo_nombre">Nuevo nombre</string>
    <string name="introduce_el_nombre_nuevo">Introduce el nombre nuevo</string>
    <string name="seleccion_categoria">Selección Categoría</string>
</resources>
