<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="luis.proyectomultimedia.GaleriaSelect">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:textStyle="bold"
        android:text="@string/seleccion_categoria"
        android:layout_margin="@dimen/margen_normal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_imagenes"
            android:layout_width="0dp"
            android:layout_height="@dimen/icono_menu_alto"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margen_normal"
            android:contentDescription="@string/fotos"
            android:src="@drawable/imagenes" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_margin="@dimen/margen_normal"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/fotos" />
    </LinearLayout>


    <LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_audios"
            android:layout_width="0dp"
            android:layout_height="@dimen/icono_menu_alto"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margen_normal"
            android:contentDescription="@string/audio"
            android:src="@drawable/musica" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_margin="@dimen/margen_normal"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/audio"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_videos"
            android:layout_width="0dp"
            android:layout_height="@dimen/icono_menu_alto"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margen_normal"
            android:contentDescription="@string/video"
            android:src="@drawable/videos" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_margin="@dimen/margen_normal"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/video" />
    </LinearLayout>


</LinearLayout>
